remove visual noise, fix hidden parameters in dark mode.

--- a/public_html/assets/css/nf-core-dark.css
+++ b/public_html/assets/css/nf-core-dark.css
@@ -450,3 +450,6 @@ hr {
   color: #e5e6e7;
   background-color: rgba(220,220,220,0.25);
 }
+.param-docs-hidden {
+  background-color: #333;
+}
